# aip_scheduling

./: .gitignore  AIP2025 - minissimpósios.xlsx  AIP2025 - pesos sessões.xlsx  AIP2025 - pessoas.xlsx  AIP2025.py  README.md  pyproject.toml
aip_scheduling/: __init__.py  __main__.py  action_data_prep.py  action_report_builder.py  data_utils.py  main.py  schemas.py  visualizer.py
data/: MS - Proposals.ods  namelist.ipynb
docs/: AIP2025 - minissimpósios.xlsx  AIP2025 - pesos paralelas.xlsx  AIP2025 - pesos sessões.xlsx  AIP2025 - pessoas.xlsx  AIP2025.py  AIP2025_formulation.ipynb
mip_template/: schemas.py
test_aip_scheduling/: test_aip_scheduling_pkg.py  test_data_loader.py  test_local_execution.py  test_mip_template_pkg.py
test_aip_scheduling/sample_test_data/: minissimposio_exclusions.csv  minissimposios.csv  pesos_paralelas.csv  pesos_sessoes.csv  pesos_sessoes_absolutos.csv  pessoas.csv
test_aip_scheduling/sample_test_data/visualization_tests/: test_minissimposios.csv  test_minisymposium_assignments.csv  test_pessoas.csv
