[project]
name = "aip_scheduling"
dynamic = ["version"]
description = "Package to schedule the minisymposiums of the AIP 2025 conference"
authors = [
    {name = "Mip Wise", email = "contact@mipwise.com"}
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
dependencies = [
    "gurobipy>=12.0.1",
    "mwcommons>=0.0.2",
    "plotly>=5.13.1",
    "ticdat>=0.2.24",
]

[project.urls]
homepage = "https://github.com/Rfelip/aip_scheduling"
source = "https://github.com/Rfelip/aip_scheduling"
tracker = "https://github.com/Rfelip/aip_scheduling/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=69",
    "wheel"
]

[tool.setuptools.dynamic]
version = {attr = "aip_scheduling.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["aip_scheduling"]
exclude = ["test_aip_scheduling"]
